--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lodash": "^4.17.15",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
