--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "http-server": "^0.12.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
@@ -57,7 +58,8 @@
   },
   "scripts": {
     "build": "webpack --config ./build/webpack.prod.js",
-    "dev": "webpack-dev-server  --config ./build/webpack.dev.js"
+    "dev": "webpack-dev-server  --config ./build/webpack.dev.js",
+    "start": "npm run build && http-server dist"
   },
   "author": "wuweixing",
   "license": "ISC"
