--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "antd": "^3.26.1",
     "axios": "^0.19.0",
+    "babel-plugin-import": "^1.13.0",
     "http-server": "^0.12.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
@@ -16,7 +18,8 @@
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "terser-webpack-plugin": "^2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
