--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
     "plugins":[
         "@babel/transform-runtime",
+        ["@babel/plugin-proposal-decorators", { "legacy": true }],
         "@babel/plugin-proposal-class-properties",
         ["import", {
             "libraryName": "antd",
