--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd": "^3.26.1",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
     "http-server": "^0.12.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
