--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "antd": "^3.26.1",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
-    "eslint-plugin-react-hooks": "^2.5.1",
     "http-server": "^0.12.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
@@ -15,6 +14,7 @@
     "react-dom": "^16.11.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "styled-components": "^5.0.1",
     "terser-webpack-plugin": "^2.2.2"
   },
   "devDependencies": {
@@ -39,6 +39,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
     "file-loader": "^4.2.0",
     "history": "^4.10.1",
     "html-webpack-plugin": "^3.2.0",
