--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
     "plugins":[
         "@babel/transform-runtime",
-        "@babel/plugin-proposal-class-properties",
+        ["@babel/plugin-proposal-decorators", { "legacy": true }],
+        ["@babel/plugin-proposal-class-properties", { "loose": true }],
         ["import", {
             "libraryName": "antd",
             "libraryDirectory": "es",
