--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "babel-plugin-import": "^1.13.0",
     "http-server": "^0.12.0",
     "lodash": "^4.17.15",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.1.8",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
