--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
     "antd": "^3.26.1",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
     "http-server": "^0.12.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "styled-components": "^5.0.1",
-    "terser-webpack-plugin": "^2.2.2"
+    "terser-webpack-plugin": "^2.2.2",
+    "ts-loader": "^7.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
@@ -27,6 +30,7 @@
     "@babel/preset-stage-0": "^7.0.0",
     "@babel/runtime": "^7.7.2",
     "autoprefixer": "^9.7.1",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
@@ -51,7 +55,9 @@
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.0",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
+    "typescript": "^3.8.3",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
