--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@types/react-router": "^5.1.5",
+    "@types/react-router-dom": "^5.1.4",
     "antd": "^3.26.1",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
@@ -29,6 +31,7 @@
     "@babel/preset-react": "^7.7.0",
     "@babel/preset-stage-0": "^7.0.0",
     "@babel/runtime": "^7.7.2",
+    "@types/webpack": "^4.41.12",
     "autoprefixer": "^9.7.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.0.3",
