--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
     "allowUnreachableCode": true, // 不报告执行不到的代码错误。
     "allowUnusedLabels": false,	// 不报告未使用的标签错误
+    "allowSyntheticDefaultImports":true, //允许从没有设置默认导出的模块中默认导入
     "alwaysStrict": false, // 以严格模式解析并为每个源文件生成 "use strict"语句
     "baseUrl": ".", // 工作根目录
     "experimentalDecorators": true, // 启用实验性的ES装饰器
@@ -13,6 +14,7 @@
     "types": [ //指定引入的类型声明文件，默认是自动引入所有声明文件，一旦指定该选项，则会禁用自动引入，改为只引入指定的类型声明文件，如果指定空数组[]则不引用任何文件
       "node", // 引入 node 的类型声明
     ],
+    "typeRoots":["node_modules/@types"],
     "paths": { // 指定模块的路径，和baseUrl有关联，和webpack中resolve.alias配置一样
       "src": [ //指定后可以在文件之直接 import * from 'src';
         "./src"
@@ -31,7 +33,8 @@
       "es2016",
       "es2017",
       "es2018",
-      "dom"
+      "dom",
+      "esNext"
     ]
   },
   // 指定一个匹配列表（属于自动指定该路径下的所有ts相关文件）
