--- a/package.json
+++ b/package.json
@@ -4,10 +4,6 @@
   "description": "",
   "private": true,
   "dependencies": {
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
-    "@types/react-router": "^5.1.5",
-    "@types/react-router-dom": "^5.1.4",
     "antd": "^3.26.1",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
@@ -31,7 +27,17 @@
     "@babel/preset-react": "^7.7.0",
     "@babel/preset-stage-0": "^7.0.0",
     "@babel/runtime": "^7.7.2",
+    "@types/lodash": "^4.14.150",
+    "@types/node": "^13.13.2",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
+    "@types/react-router": "^5.1.5",
+    "@types/react-router-dom": "^5.1.4",
     "@types/webpack": "^4.41.12",
+    "@types/webpack-env": "^1.15.2",
+    "@types/webpack-merge": "^4.1.5",
+    "@typescript-eslint/eslint-plugin": "^2.29.0",
+    "@typescript-eslint/parser": "^2.29.0",
     "autoprefixer": "^9.7.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.0.3",
@@ -41,13 +47,17 @@
     "copy-webpack-plugin": "^5.0.5",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
-    "eslint": "^6.7.1",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-webpack": "^0.12.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.5.1",
+    "eslint-plugin-typescript": "^0.14.0",
     "file-loader": "^4.2.0",
     "history": "^4.10.1",
     "html-webpack-plugin": "^3.2.0",
@@ -57,6 +67,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
+    "prettier": "^2.0.5",
     "sass-loader": "^8.0.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
@@ -70,7 +81,8 @@
   "scripts": {
     "build": "webpack --progress --colors -p --config ./build/webpack.prod.js",
     "dev": "webpack-dev-server --progress --colors  --config ./build/webpack.dev.js",
-    "start": "npm run build && http-server dist"
+    "start": "npm run build && http-server dist",
+    "lint": "eslint --ext .js --ext .jsx --ext .ts --ext .tsx src/"
   },
   "author": "wuweixing",
   "license": "ISC"
