--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "@loadable/component": "^5.12.0",
     "antd": "^3.26.1",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
