--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "@loadable/component": "^5.12.0",
     "antd": "^3.26.1",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
     "http-server": "^0.12.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
+    "qs": "^6.9.4",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
@@ -44,6 +46,8 @@
     "cssnano": "^4.1.10",
     "eslint": "^6.7.1",
     "eslint-config-airbnb": "^18.0.1",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-webpack": "^0.12.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
@@ -61,6 +65,7 @@
     "style-loader": "^1.0.0",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.2",
+    "webpack-bundle-analyzer": "^3.7.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.2"
