--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,7 +7,10 @@
         ],
         "@views/*": [
             "./src/views/*"
-          ],
+        ],
+        "static/*": [
+            "./static/*"
+        ]
       },
       "experimentalDecorators":true
     }
