--- a/.babelrc
+++ b/.babelrc
@@ -16,7 +16,8 @@
             "libraryName": "antd",
             "libraryDirectory": "es",
             "style": "css" // `style: true` 会加载 less 文件
-        }]
+        }],
+        "@babel/plugin-syntax-dynamic-import"
     ],
     "presets": [
         "@babel/preset-env", "@babel/preset-react"
