--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "private": true,
   "dependencies": {
     "@loadable/component": "^5.12.0",
-    "antd": "^3.26.1",
+    "antd": "^4.3.0",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
     "http-server": "^0.12.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "qs": "^6.9.4",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
@@ -73,7 +73,7 @@
   "scripts": {
     "build": "webpack --progress --colors -p --config ./build/webpack.prod.js",
     "dev": "webpack-dev-server --progress --colors  --config ./build/webpack.dev.js",
-    "start": "npm run build && http-server dist"
+    "start": "http-server dist"
   },
   "author": "wuweixing",
   "license": "ISC"
