--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,13 @@
 {
     "plugins":[
-        "@babel/transform-runtime",
         ["@babel/plugin-proposal-decorators", { "legacy": true }],
         "@babel/plugin-proposal-class-properties",
         ["import", {
             "libraryName": "antd",
             "libraryDirectory": "es",
             "style": "css" // `style: true` 会加载 less 文件
-        }]
+        }],
+        ["@babel/plugin-transform-runtime"]
     ],
     "presets": [
         "@babel/preset-env", "@babel/preset-react"
