--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "dependencies": {
     "@loadable/component": "^5.12.0",
-    "antd": "^3.26.1",
+    "antd": "^4.3.0",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "http-server": "^0.12.0",
@@ -68,7 +68,7 @@
   "scripts": {
     "build": "webpack --progress --colors -p --config ./build/webpack.prod.js",
     "dev": "webpack-dev-server --progress --colors  --config ./build/webpack.dev.js",
-    "start": "npm run build && http-server dist"
+    "start": "http-server dist"
   },
   "author": "wuweixing",
   "license": "ISC"
