--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "antd": "^4.3.0",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
+    "express": "^4.17.1",
     "http-server": "^0.12.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
@@ -57,6 +58,7 @@
     "history": "^4.10.1",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.17",
+    "http-proxy-middleware": "^1.0.4",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
@@ -74,7 +76,8 @@
   "scripts": {
     "build": "webpack --progress --colors -p --config ./build/webpack.prod.js",
     "dev": "webpack-dev-server --progress --colors  --config ./build/webpack.dev.js",
-    "start": "http-server dist"
+    "server": "http-server dist",
+    "start": "node server/index.js"
   },
   "author": "wuweixing",
   "license": "ISC"
