--- a/package.json
+++ b/package.json
@@ -60,8 +60,9 @@
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.17",
     "http-proxy-middleware": "^1.0.4",
+    "less": "^3.11.3",
+    "less-loader": "^6.1.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
