--- a/package.json
+++ b/package.json
@@ -51,12 +51,12 @@
     "history": "^4.10.1",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.17",
+    "less": "^3.11.3",
+    "less-loader": "^6.1.1",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.2",
@@ -66,9 +66,10 @@
     "webpack-merge": "^4.2.2"
   },
   "scripts": {
+    "analyzer": "webpack --progress --colors -p --config ./build/webpack.analyzer.js",
     "build": "webpack --progress --colors -p --config ./build/webpack.prod.js",
     "dev": "webpack-dev-server --progress --colors  --config ./build/webpack.dev.js",
-    "start": "http-server dist"
+    "start": "http-server dist -p 30001"
   },
   "author": "wuweixing",
   "license": "ISC"
