--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "private": true,
   "dependencies": {
-    "antd": "^3.26.1",
-    "axios": "^0.19.0",
+    "antd": "^4.3.0",
+    "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "http-server": "^0.12.0",
     "lodash": "^4.17.15",
@@ -62,13 +62,13 @@
     "history": "^4.10.1",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.17",
+    "less": "^3.11.3",
+    "less-loader": "^6.1.3",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.5",
-    "sass-loader": "^8.0.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
     "typescript": "^3.8.3",
