--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "private": true,
   "dependencies": {
     "@loadable/component": "^5.12.0",
+    "ahooks": "^2.2.0",
     "antd": "^4.3.0",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
     "express": "^4.17.1",
     "http-server": "^0.12.0",
     "lodash": "^4.17.15",
+    "moment": "^2.27.0",
     "prop-types": "^15.7.2",
     "qs": "^6.9.4",
     "react": "^16.13.1",
@@ -62,7 +64,8 @@
     "http-proxy-middleware": "^1.0.4",
     "less": "^3.11.3",
     "less-loader": "^6.1.0",
-    "mini-css-extract-plugin": "^0.8.0",
+    "mini-css-extract-plugin": "^0.8.2",
+    "mockjs": "^1.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
