--- a/.babelrc
+++ b/.babelrc
@@ -12,6 +12,9 @@
         ["@babel/plugin-transform-runtime"]
     ],
     "presets": [
-        "@babel/preset-env", "@babel/preset-react"
+        ["@babel/preset-env",{
+            "corejs":3,
+            "useBuiltIns":"usage"
+        }], "@babel/preset-react"
     ]
 }
