--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.3.0",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
+    "core-js": "^3.0.1",
     "express": "^4.17.1",
     "http-server": "^0.12.0",
     "lodash": "^4.17.15",
@@ -28,7 +29,8 @@
     "redux-thunk": "^2.3.0",
     "redux-undo": "^1.0.0",
     "reselect": "^4.0.0",
-    "terser-webpack-plugin": "^2.2.2"
+    "terser-webpack-plugin": "^2.2.2",
+    "wangeditor": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
