--- a/.babelrc
+++ b/.babelrc
@@ -8,7 +8,7 @@
             // "camel2DashComponentName": false,  // default: true，将引入的组件名转化为"-"连接的文件名
             "style": "css" // `style: true` 会加载 less 文件
         },"antd"],
-        ["import", { "libraryName": "ahooks","camel2DashComponentName": false},"ahooks"],
+        // ["import", { "libraryName": "ahooks", "camel2DashComponentName": false},"ahooks"],
         ["@babel/plugin-transform-runtime"],
         ["@babel/plugin-proposal-optional-chaining"]
     ],
