--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "@loadable/component": "^5.12.0",
     "ahooks": "^2.3.0",
     "antd": "^4.3.0",
