add antd table demo

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.2.2",
+    "@ant-design/icons": "^4.3.0",
     "@loadable/component": "^5.12.0",
     "ahooks": "^2.3.0",
-    "antd": "^4.6.0",
+    "antd": "^4.8.6",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
     "core-js": "^3.0.1",
@@ -43,6 +43,7 @@
     "@babel/preset-react": "^7.7.0",
     "@babel/preset-stage-0": "^7.0.0",
     "@babel/runtime": "^7.7.2",
+    "array-move": "^3.0.1",
     "autoprefixer": "^9.7.1",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
@@ -73,6 +74,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
+    "react-sortable-hoc": "^1.11.0",
     "style-loader": "^1.0.0",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.2",
