--- a/.babelrc
+++ b/.babelrc
@@ -10,6 +10,8 @@
         }]
     ],
     "presets": [
-        "@babel/preset-env", "@babel/preset-react"
+        "@babel/preset-env", 
+        "@babel/preset-react", 
+        "@babel/preset-typescript",
     ]
 }
