--- a/package.json
+++ b/package.json
@@ -27,7 +27,15 @@
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
     "@babel/preset-stage-0": "^7.0.0",
+    "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.7.2",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
+    "@types/react-router-dom": "^5.1.9",
+    "@types/webpack-env": "^1.16.2",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
+    "@umijs/fabric": "^2.8.0",
     "autoprefixer": "^9.7.1",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
@@ -54,6 +62,8 @@
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.0.0",
+    "ts-loader": "^6.2.2",
+    "typescript": "^4.4.3",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
