--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@babel/preset-stage-0": "^7.0.0",
     "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.7.2",
+    "@types/enzyme": "^3.10.9",
+    "@types/jest": "^27.0.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.9",
@@ -38,12 +40,15 @@
     "@umijs/fabric": "^2.8.0",
     "autoprefixer": "^9.7.1",
     "babel-eslint": "^10.0.3",
+    "babel-jest": "^27.2.0",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.5",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^6.7.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
@@ -55,13 +60,16 @@
     "history": "^4.10.1",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.17",
+    "jest": "^27.2.0",
     "less": "^4.1.1",
     "less-loader": "^6.1.1",
     "mini-css-extract-plugin": "^0.8.0",
+    "node-notifier": "^10.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.0.0",
+    "ts-jest": "^27.0.5",
     "ts-loader": "^6.2.2",
     "typescript": "^4.4.3",
     "url-loader": "^2.2.0",
@@ -73,7 +81,9 @@
   "scripts": {
     "build": "webpack --progress --colors -p --config ./build/webpack.prod.js",
     "dev": "webpack-dev-server --progress --colors  --config ./build/webpack.dev.js",
-    "start": "npm run build && http-server dist"
+    "start": "npm run build && http-server dist",
+    "test": "jest --watchAll",
+    "test:cov": "jest --coverage"
   },
   "author": "wuweixing",
   "license": "ISC"
