--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.17",
     "jest": "^27.2.0",
+    "jest-environment-jsdom": "^27.2.4",
+    "jest-enzyme": "^7.1.2",
     "less": "^4.1.1",
     "less-loader": "^6.1.1",
     "mini-css-extract-plugin": "^0.8.0",
@@ -68,6 +70,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
+    "react-content-loader": "^6.0.3",
     "style-loader": "^1.0.0",
     "ts-jest": "^27.0.5",
     "ts-loader": "^6.2.2",
