--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
     "prop-types": "^15.7.2",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "styled-components": "^5.0.1",
     "terser-webpack-plugin": "^2.2.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.2",
+    "@babel/core": "^7.15.8",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.6.2",
@@ -31,8 +31,9 @@
     "@babel/runtime": "^7.7.2",
     "@types/enzyme": "^3.10.9",
     "@types/jest": "^27.0.1",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
+    "@types/lodash": "^4.14.176",
+    "@types/react": "^17.0.32",
+    "@types/react-dom": "^17.0.10",
     "@types/react-router-dom": "^5.1.9",
     "@types/webpack-env": "^1.16.2",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
@@ -86,7 +87,8 @@
     "dev": "webpack-dev-server --progress --colors  --config ./build/webpack.dev.js",
     "start": "npm run build && http-server dist",
     "test": "jest --watchAll",
-    "test:cov": "jest --coverage"
+    "test:cov": "jest --coverage",
+    "lint-fix": "eslint --fix --ext .js,.jsx,.ts,.tsx src/"
   },
   "author": "wuweixing",
   "license": "ISC"
