--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "lib": ["es2015", "es2016", "DOM"] /* 编译过程中需要引入的库文件的列表 */,
       "allowJs": false /* 允许编译 js 文件 */,
       "checkJs": false /* 在 .js文件中报告错误。与 --allowJs配合使用。 */,
-      "jsx": "react" /* 在 .tsx文件里支持JSX： "React"或 "Preserve"。 */,
+      "jsx": "react-jsx" /* 在 .tsx文件里支持JSX： "React"或 "Preserve"。 */,
       "declaration": true /* 生成相应的 .d.ts文件。 */,
       // "declarationMap": true,                /* 生成声明文件的输出路径。 */
       "sourceMap": false /* 生成相应的 .map文件。 */,
