feat: 升级webpack4->webpack5

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-dom": "^17.0.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "styled-components": "^5.0.1",
-    "terser-webpack-plugin": "^2.2.2"
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
@@ -44,8 +43,8 @@
     "babel-jest": "^27.2.0",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.5",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
     "enzyme": "^3.11.0",
@@ -59,32 +58,35 @@
     "eslint-plugin-react-hooks": "^2.5.1",
     "file-loader": "^4.2.0",
     "history": "^4.10.1",
-    "html-webpack-plugin": "^3.2.0",
-    "html-webpack-tags-plugin": "^2.0.17",
+    "html-webpack-plugin": "^5.5.0",
+    "html-webpack-tags-plugin": "^3.0.1",
     "jest": "^27.2.0",
     "jest-environment-jsdom": "^27.2.4",
     "jest-enzyme": "^7.1.2",
     "less": "^4.1.1",
     "less-loader": "^6.1.1",
-    "mini-css-extract-plugin": "^0.8.0",
+    "mini-css-extract-plugin": "^2.4.4",
     "node-notifier": "^10.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "react-content-loader": "^6.0.3",
     "style-loader": "^1.0.0",
+    "terser-webpack-plugin": "^5.2.4",
     "ts-jest": "^27.0.5",
     "ts-loader": "^6.2.2",
     "typescript": "^4.4.3",
     "url-loader": "^2.2.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^4.2.2"
+    "webpack": "^5.60.0",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0",
+    "webpack-merge": "^5.8.0"
   },
   "scripts": {
-    "build": "webpack --progress --colors -p --config ./build/webpack.prod.js",
-    "dev": "webpack-dev-server --progress --colors  --config ./build/webpack.dev.js",
+    "build": "webpack --config ./build/webpack.prod.js",
+    "dev": "webpack serve  --config ./build/webpack.dev.js",
+    "analyzer": "webpack --config ./build/webpack.analyzer.js",
     "start": "npm run build && http-server dist",
     "test": "jest --watchAll",
     "test:cov": "jest --coverage",
