--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
     "http-server": "^0.12.0",
+    "history": "^4.10.1",
     "lodash": "^4.17.15",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
@@ -37,7 +38,7 @@
     "@types/webpack-env": "^1.16.2",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
-    "@umijs/fabric": "^2.8.0",
+    "@umijs/fabric": "2.2.1",
     "autoprefixer": "^9.7.1",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^27.2.0",
@@ -57,7 +58,6 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "file-loader": "^4.2.0",
-    "history": "^4.10.1",
     "html-webpack-plugin": "^5.5.0",
     "html-webpack-tags-plugin": "^3.0.1",
     "jest": "^27.2.0",
