--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "antd": "^3.26.1",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
-    "http-server": "^0.12.0",
     "history": "^4.10.1",
+    "http-server": "^0.12.0",
     "lodash": "^4.17.15",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
@@ -32,7 +32,7 @@
     "@types/enzyme": "^3.10.9",
     "@types/jest": "^27.0.1",
     "@types/lodash": "^4.14.176",
-    "@types/react": "^17.0.32",
+    "@types/react": "^18.0.18",
     "@types/react-dom": "^17.0.10",
     "@types/react-router-dom": "^5.1.9",
     "@types/webpack-env": "^1.16.2",
@@ -44,6 +44,7 @@
     "babel-jest": "^27.2.0",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
+    "classnames": "^2.3.1",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^3.2.0",
@@ -75,7 +76,7 @@
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^5.2.4",
     "ts-jest": "^27.0.5",
-    "ts-loader": "^6.2.2",
+    "ts-loader": "^9.3.1",
     "typescript": "^4.4.3",
     "url-loader": "^2.2.0",
     "webpack": "^5.60.0",
@@ -92,8 +93,8 @@
     "test": "jest --watchAll",
     "test:cov": "jest --coverage",
     "lint-fix": "eslint --fix --ext .js,.jsx,.ts,.tsx src/",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d dist"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "author": "wuweixing",
   "license": "ISC"
